2013-09-02 Added "eps" to output file types and
           added "pdftops" key to config schema to support
           this option. Committed 0.1.6 to github.

2013-08-13 Added "transparent" setting for raster images.
           Committed 0.1.5 to github.

2013-08-11 Changed "margin" setting to "papermargin" setting
           and added "crop_margin" setting that allows adding
           margins to the cropped document. Committed 0.1.4 to github.

2013-08-06 Added text_depth setting to chefigit configuration which
           specifies how deep to look into dest_dir if tex_file is null.
           Also, if dest_dir is null, then the directory is the same
           as tex_file. If both null, then the directory is the
           execution directory (pwd). Committed 0.1.3 to github.

2013-08-06 Changed log levels for chemfigit configuration to be
           lowercase. Added feature where the last .tex file of
           dest_dir is used if tex_file is null. Committed
           0.1.2 to github.

2013-07-25 Made testing script python.
           Improved naming of temp directories.
           Reordered config schema and improved help strings.
           Committed 0.1.1 to github.

2013-07-25 Initial release (0.1.0) to github.