@@ -18,5 +18,5 @@
 \usepackage{color}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 
-\input{include/Custom-Colors.tex}
-\input{include/ChemFig-Setup.tex}
+\input{Custom-Colors.tex}
+\input{ChemFig-Setup.tex}
