@@ -1,3 +1,8 @@
+2013-12-02 Got rid of cumbersome processing of preamble to find
+           included files and now modify TEXINPUTS instead
+           with configuration setting tex_includes.
+           Committed 0.1.7 to github.
+
 2013-09-02 Added "eps" to output file types and
            added "pdftops" key to config schema to support
            this option. Committed 0.1.6 to github.
